examples/test/testpolicy5936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5936
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key22: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
          key13: value29
      podSelector:
        matchLabels:
          key49: value32
          key34: value41
